Finetuning of HTML layout
Background: HTML file shall look like the HTML mail

--- a/tools/release_info/example/release_info_RobotFramework_AIO_0.10.1.2.html
+++ b/tools/release_info/example/release_info_RobotFramework_AIO_0.10.1.2.html
@@ -2,11 +2,6 @@
 <head>
    <meta name="RobotFramework AIO" content="Release">
    <title>RobotFramework AIO</title>
-
-   <style type="text/css">
-   td {padding:6pt 6pt 6pt 6pt;}
-   </style>
-
 </head>
 <body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#0000FF" alink="#0000FF">
 
@@ -17,12 +12,12 @@
    <col width="100%" span="1"/>
 </colgroup>
 <tr border="0" cellspacing="0" colspan="2">
-   <td bgcolor="#FFFFFF" align="center" valign="top" border="0" cellspacing="0">
+   <td bgcolor="#FFFFFF" align="center" valign="top" border="0" cellspacing="0" style="padding:9pt 6pt 9pt 6pt">
       <font face="Arial" color="#242424" size="+4"><b>RobotFramework AIO</b></font>
    </td>
 </tr>
 <tr border="0" cellspacing="0" colspan="2">
-   <td bgcolor="#FFFFFF" align="center" valign="top" border="0" cellspacing="0">
+   <td bgcolor="#FFFFFF" align="center" valign="top" border="0" cellspacing="0" style="padding:9pt 6pt 9pt 6pt">
       <font face="Arial" color="#242424" size="+1">(<i>&quot;<b>A</b>ll <b>I</b>n <b>O</b>ne&quot; bundle, based on Robot Framework</i>)</font>
    </td>
 </tr>
@@ -40,11 +35,11 @@
          </colgroup>
          <tr>
             <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#000000" size="2">Release version</font></td>
-            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">0.9.3.0</font></td>
+            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">0.10.1.2</font></td>
          </tr>
          <tr>
             <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#000000" size="2">Release date</font></td>
-            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">10.2023</font></td>
+            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">12.2023</font></td>
          </tr>
       </table>
    </td>
@@ -57,7 +52,7 @@
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left"><font face="Arial" color="#000000" size="-1"><p>With this release the prototype of a new tool is available that
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>With this release the prototype of a new tool is available that
 creates release mails in HTML format. The content is also available as
 separate HTML file.</p>
 </font></td>
@@ -71,7 +66,7 @@ separate HTML file.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left"><font face="Arial" color="#000000" size="-1"><p>The creation of release mails can be automated soon ...</p>
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>The creation of release mails can be automated soon ...</p>
 </font></td>
 </tr>
 
@@ -83,7 +78,7 @@ separate HTML file.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left"><font face="Arial" color="#000000" size="-1"><p>(<em>beta version, stabilization still ongoing</em>)</p>
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>(<em>beta version, stabilization still ongoing</em>)</p>
 </font></td>
 </tr>
 
@@ -95,7 +90,7 @@ separate HTML file.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left"><font face="Arial" color="#000000" size="-1"><p>The RobotFramework AIO needs to be installed</p>
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>The RobotFramework AIO needs to be installed</p>
 </font></td>
 </tr>
 
@@ -112,9 +107,9 @@ separate HTML file.</p>
 </colgroup>
 
 <tr>
-   <td bgcolor="#F5F5F5" width="3%" valign="top" align="center"><font face="Arial" color="#FF0000" size="-1"><b>1</b></font></td>
-   <td bgcolor="#F5F5F5" width="16%" valign="top" align="left"><font face="Arial" color="#000000" size="-1"><i>ReleaseTool</i></font></td>
-   <td bgcolor="#F5F5F5" width="81%" valign="top" align="left"><font face="Arial" color="#000000" size="-1"><dl>
+   <td bgcolor="#F5F5F5" width="3%" valign="middle" align="center" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#FF0000" size="-1"><b>1</b></font></td>
+   <td bgcolor="#F5F5F5" width="16%" valign="middle" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><i>ReleaseTool</i></font></td>
+   <td bgcolor="#F5F5F5" width="81%" valign="middle" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><dl>
 <dt><strong>1. Location</strong></dt>
 <dd>
 <p>The release info tool (<strong>release_info.py</strong>) is hosted in
@@ -221,7 +216,7 @@ carefully.</p></li>
 
 <hr width="100%" align="center" color="#d0d0d0"/>
 
-<font face="Arial" color="#000000" size="-2">Created at 20.10.2023 - 09:13:41</font>
+<font face="Arial" color="#000000" size="-2">Created at 13.12.2023 - 11:18:48</font>
 </body>
 </html>
 
