--- a/tools/release_info/example/release_info_RobotFramework_AIO_0.10.0.5.html
+++ b/tools/release_info/example/release_info_RobotFramework_AIO_0.10.0.5.html
@@ -35,11 +35,11 @@
          </colgroup>
          <tr>
             <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#000000" size="2">Release version</font></td>
-            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">0.10.1.2</font></td>
+            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">0.10.0.5</font></td>
          </tr>
          <tr>
             <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#000000" size="2">Release date</font></td>
-            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">12.2023</font></td>
+            <td bgcolor="#F5F5F5" width="50%" align="left" style="padding:9pt 6pt 9pt 6pt"><font face="Arial" color="#FF0000" size="2">01.2024</font></td>
          </tr>
       </table>
    </td>
@@ -66,7 +66,7 @@ separate HTML file.</p>
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>The creation of release mails can be automated soon ...</p>
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>The creation of release mails is automated</p>
 </font></td>
 </tr>
 
@@ -74,11 +74,11 @@ separate HTML file.</p>
 
 <par><font size="-3">&nbsp;</font></par>
 
-<h3><font face="Arial" color="#242424">Additional hints</font></h3>
+<h3><font face="Arial" color="#242424">Additional information</font></h3>
 <table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
 
 <tr>
-   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>(<em>beta version, stabilization still ongoing</em>)</p>
+   <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>Additional information can be placed here</p>
 </font></td>
 </tr>
 
@@ -91,6 +91,18 @@ separate HTML file.</p>
 
 <tr>
    <td bgcolor="#F5F5F5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>The RobotFramework AIO needs to be installed</p>
+</font></td>
+</tr>
+
+</table>
+
+<par><font size="-3">&nbsp;</font></par>
+
+<h3><font face="Arial" color="#242424">Restrictions</font></h3>
+<table width="100%" border="1" cellspacing="0" cellpadding="0" frame="box" rules="all" align="left">
+
+<tr>
+   <td bgcolor="#FFEFD5" width="100%" align="left" style="padding:6pt 6pt 6pt 6pt"><font face="Arial" color="#000000" size="-1"><p>Currently HTML content must be copied to an email manually</p>
 </font></td>
 </tr>
 
@@ -138,8 +150,8 @@ distribution and contains package information like the release number
 and date.</p></li>
 <li><p><strong>release_main_info.json</strong></p>
 <p>This file contains common release information like: "RELEASENOTES",
-"HIGHLIGHTS", "ADDITIONALHINTS" and "REQUIREMENTS". These sections are
-optional.</p>
+"HIGHLIGHTS", "ADDITIONALINFORMATION", "REQUIREMENTS" and
+"RESTRICTIONS". These sections are optional.</p>
 <p>Responsible for the content of this file is the Product
 Owner.</p></li>
 <li><p><strong>release_items_&lt;</strong> <em>component name</em>
@@ -182,7 +194,7 @@ parameter:</p>
 False</p></li>
 </ul>
 </dd>
-<dt><strong>5. Additional hints</strong></dt>
+<dt><strong>5. Additional information</strong></dt>
 <dd>
 <ol type="1">
 <li><p>The files <strong>release_main_info.json</strong> and
@@ -216,7 +228,7 @@ carefully.</p></li>
 
 <hr width="100%" align="center" color="#d0d0d0"/>
 
-<font face="Arial" color="#000000" size="-2">Created at 13.12.2023 - 11:18:48</font>
+<font face="Arial" color="#000000" size="-2">Created at 07.02.2024 - 16:57:55</font>
 </body>
 </html>
 
